--- a/src/playground.ipynb
+++ b/src/playground.ipynb
@@ -59,6 +59,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = {\n",
+    "    1: 12,\n",
+    "    2: 23,\n",
+    "    3: \"foo\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s: foo\n",
+      "d: {1: 12, 2: 23}\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = d[3]\n",
+    "\n",
+    "del d[3]\n",
+    "print(f\"s: {s}\")\n",
+    "print(f\"d: {d}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -67,9 +102,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ingestion-pipeline-llm",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "ingestion-pipeline-llm"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
