wip - load and chunk works

--- a/src/playground.ipynb
+++ b/src/playground.ipynb
@@ -94,6 +94,77 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import chromadb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chroma_client = chromadb.Client()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "collection = chroma_client.create_collection(name=\"my_collection\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/shauryapednekar/.cache/chroma/onnx_models/all-MiniLM-L6-v2/onnx.tar.gz: 100%|██████████| 79.3M/79.3M [00:17<00:00, 4.63MiB/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "collection.add(\n",
+    "    documents=[\n",
+    "        \"This is a document about pineapple\",\n",
+    "        \"This is a document about oranges\"\n",
+    "    ],\n",
+    "    ids=[\"id1\", \"id2\"]\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'ids': [['id1', 'id2']], 'distances': [[1.0403728485107422, 1.2430635690689087]], 'metadatas': [[None, None]], 'embeddings': None, 'documents': [['This is a document about pineapple', 'This is a document about oranges']], 'uris': None, 'data': None}\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = collection.query(\n",
+    "    query_texts=[\"This is a query document about hawaii\"], # Chroma will embed this for you\n",
+    "    n_results=2 # how many results to return\n",
+    ")\n",
+    "print(results)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
