wip - everything works, speed around 20files/s

--- a/src/playground.ipynb
+++ b/src/playground.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -184,17 +184,6 @@
      "text": [
       "/home/shaurya/foo/src/ingestion-pipeline/venv/lib/python3.10/site-packages/huggingface_hub/file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
       "  warnings.warn(\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'query' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 8\u001b[0m\n\u001b[1;32m      1\u001b[0m embeddings \u001b[38;5;241m=\u001b[39m HuggingFaceEmbeddings(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m{\n\u001b[1;32m      2\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodel_name\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msentence-transformers/all-mpnet-base-v2\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m      3\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodel_kwargs\u001b[39m\u001b[38;5;124m\"\u001b[39m: {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdevice\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcuda\u001b[39m\u001b[38;5;124m\"\u001b[39m},\n\u001b[1;32m      4\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mencode_kwargs\u001b[39m\u001b[38;5;124m\"\u001b[39m: {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnormalize_embeddings\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28;01mFalse\u001b[39;00m},\n\u001b[1;32m      5\u001b[0m     })\n\u001b[1;32m      6\u001b[0m new_db \u001b[38;5;241m=\u001b[39m FAISS\u001b[38;5;241m.\u001b[39mload_local(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfaiss_index\u001b[39m\u001b[38;5;124m\"\u001b[39m, embeddings,allow_dangerous_deserialization\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m----> 8\u001b[0m docs \u001b[38;5;241m=\u001b[39m new_db\u001b[38;5;241m.\u001b[39msimilarity_search(\u001b[43mquery\u001b[49m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'query' is not defined"
      ]
     }
    ],
@@ -209,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,19 +207,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Document(page_content='Blakey began his career at Wells Fargo in Commercial Real Estate including a five-year assignment in Chicago managing the Midwest region. After significantly growing Wells Fargo’s Midwest Commercial Real Estate business, Blakey established and grew the company’s Commercial Mortgage businesses, including Commercial Mortgage-Backed Securities, Multifamily Capital, Commercial Mortgage Servicing, and Community Lending & Investment. Under his leadership, each business grew to become industry-leading', metadata={'published': '2018-05-17T17:00:00.000+03:00', 'url': 'http://www.cnbc.com/2018/05/17/business-wire-ed-blakey-to-retire-after-34-years-with-wells-fargo.html', 'title': 'Ed Blakey to Retire After 34 Years with Wells Fargo', 'language': 'english', 'source': '../unzipped/financial_dataset/2018_05_112b52537b67659ad3609a234388c50a/news_0037053.json'}),\n",
-       " Document(page_content='Marks, since joining the company in 1987, has held various senior leadership roles in commercial and corporate banking, trade finance and credit risk management. Prior to leading Capital Finance to be the #1 Bookrunner of asset-based loans in the U.S. in 2017, he was the group risk officer for Wells Fargo’s Consumer Lending and Payments, Virtual Solutions and Innovation businesses. Marks also serves on the Wells Fargo Management Committee.\\nAbout Wells Fargo', metadata={'published': '2018-05-17T17:00:00.000+03:00', 'url': 'http://www.cnbc.com/2018/05/17/business-wire-ed-blakey-to-retire-after-34-years-with-wells-fargo.html', 'title': 'Ed Blakey to Retire After 34 Years with Wells Fargo', 'language': 'english', 'source': '../unzipped/financial_dataset/2018_05_112b52537b67659ad3609a234388c50a/news_0037053.json'}),\n",
-       " Document(page_content='Wells Fargo also announced that David Marks, who has been with the company for 31 years and is currently head of Wells Fargo Capital Finance , will succeed Blakey as head of Commercial Capital starting June 30, 2018. In addition, ABF, which dual-reported into Commercial Capital and the Wells Fargo Securities business, will continue to be led by Chris Pink, and going forward, will solely report into the Wells Fargo Securities business under Mary Katherine DuBose, managing director and head of', metadata={'published': '2018-05-17T17:00:00.000+03:00', 'url': 'http://www.cnbc.com/2018/05/17/business-wire-ed-blakey-to-retire-after-34-years-with-wells-fargo.html', 'title': 'Ed Blakey to Retire After 34 Years with Wells Fargo', 'language': 'english', 'source': '../unzipped/financial_dataset/2018_05_112b52537b67659ad3609a234388c50a/news_0037053.json'}),\n",
-       " Document(page_content='DuBose joined Wells Fargo in 1998 and has more than 20 years of investment banking experience. She started her Wells Fargo career by forming the Business & Commercial Loan Securitization team. From there led Corporate Debt Finance, Subscription Finance and Corporate Net Lease groups. DuBose then went on to co-head Asset-Backed Finance & Securitization. In her current role, she leads teams responsible for high-grade debt, high-yield debt and loans syndications originations and executions.', metadata={'published': '2018-05-17T17:00:00.000+03:00', 'url': 'http://www.cnbc.com/2018/05/17/business-wire-ed-blakey-to-retire-after-34-years-with-wells-fargo.html', 'title': 'Ed Blakey to Retire After 34 Years with Wells Fargo', 'language': 'english', 'source': '../unzipped/financial_dataset/2018_05_112b52537b67659ad3609a234388c50a/news_0037053.json'})]"
+       "[Document(page_content=\"LIESMAN: UNDERSTOOD --\\nMNUCHIN: AND WE ALSO ANNOUNCED YESTERDAY AS IT RELATES TO AGRICULTURE, WE'RE GOING TO PROTECT OUR FARMERS. THE PRESIDENT INSTRUCTED SECRETARY PERDUE TO WORK WITHTHE REST OF THE CABINET TO PROTECT OUR FARMERS FROM UNFAIR TARGETING.\\nLIESMAN: ONE OTHER QUESTION OF ABIDING CONCERN TO THE MARKET HOW POLICY IS FORMED IN THE ADMINISTRATION, CAN YOU TELL US -- DID YOU KNOW ABOUT THE PRESIDENTS THREAT OF $100 BILLION OF TARIFFS BEFORE HE ANNOUNCED IT?\", metadata={'language': 'english', 'url': 'http://www.cnbc.com/2018/04/06/cnbc-exclusive-cnbc-transcript-u-s-treasury-secretary-steven-mnuchin-on-cnbcs-power-lunch-today.html', 'published': '2018-04-06T23:25:00.000+03:00', 'title': 'CNBC Exclusive: CNBC Transcript: U.S. Treasury Secretary Steven Mnuchin on CNBC’s “Power Lunch” Today', 'source': '../unzipped/financial_dataset/2018_04_112b52537b67659ad3609a234388c50a/news_0013370.json'}),\n",
+       " Document(page_content=\"DAILY INVOLVED IN THESE CONVERSATIONS WITH THE ECONOMIC TEAM AND ON THE ONE HAND HE'S ABSOLUTELY WILLING TO DEFEND OUR INTERESTS. SO LET ME BE CLEAR, THIS IS ABOUT FREE AND FAIR TRADE CHINAS BEEN ABLE TO DO TRADE FREELY IN OUR COUNTRY. OUR COMPANIES HAVE BEEN LIMITED. THERE HAS BEEN FORCED TECHNOLOGY AND FORCED JOINT VENTURES AND OUR OBJECTIVE THE GOOD NEWS IS PRESIDENT XI AND PRESIDENT TRUMP HAVE A VERY GOOD RELATIONSHIP. THEY SPEAK REGULARLY. THERE IS CLEAR UNDERSTANDING. WE HAVE MUTUAL\", metadata={'language': 'english', 'url': 'http://www.cnbc.com/2018/04/06/cnbc-exclusive-cnbc-transcript-u-s-treasury-secretary-steven-mnuchin-on-cnbcs-power-lunch-today.html', 'published': '2018-04-06T23:25:00.000+03:00', 'title': 'CNBC Exclusive: CNBC Transcript: U.S. Treasury Secretary Steven Mnuchin on CNBC’s “Power Lunch” Today', 'source': '../unzipped/financial_dataset/2018_04_112b52537b67659ad3609a234388c50a/news_0013370.json'}),\n",
+       " Document(page_content='MNUCHIN: ABSOLUTELY NOT. OKAY. THE PRESIDENT IS FOCUSED ON AMAZON AND THE ECONOMIC ISSUES THAT ARE IMPACTING RETAILERS ALL AROUND THE COUNTRY. I THINK AS YOU KNOW –\\nEISEN: BUT HE IS GOING AFTER ONE SPECIFIC COMPANY. WHAT MESSAGE DOES THAT SEND TO AMERICAN COMPANIES AND AMERICAN INDUSTRIES THAT HE SAYS HE IS FIGHTING TO PROTECT?', metadata={'language': 'english', 'url': 'http://www.cnbc.com/2018/04/06/cnbc-exclusive-cnbc-transcript-u-s-treasury-secretary-steven-mnuchin-on-cnbcs-power-lunch-today.html', 'published': '2018-04-06T23:25:00.000+03:00', 'title': 'CNBC Exclusive: CNBC Transcript: U.S. Treasury Secretary Steven Mnuchin on CNBC’s “Power Lunch” Today', 'source': '../unzipped/financial_dataset/2018_04_112b52537b67659ad3609a234388c50a/news_0013370.json'}),\n",
+       " Document(page_content=\"MNUCHIN: WELL, AGAIN, PRESIDENT TRUMP, I THINK PROBABLY HAS BEST RELATIONSHIP WITH PRESIDENT XI OF ANY PRESIDENT. I THINK THEY'RE IN CONSTANT DIALOGUE. I THINK THAT AT ALL LEVELS OF THE GOVERNMENT WE'VE HAD VERY GOOD DIALOGUE. I THINK WE'VE MADE A LOT OF PROGRESS OVER THE LAST YEAR. AND – BUT THE PRESIDENT IS DETERMINED. AND WE'VE BEEN VERY CLEAR FROM DAY ONE, THERE'IS NO SURPRISES HERE, THERE IS NO ISSUE IN TERMS OF WHAT WE'RE TRYING TO DO. WE'RE TRYING TO CREATE A LEVEL PLAYING FIELD. AND AS\", metadata={'language': 'english', 'url': 'http://www.cnbc.com/2018/04/06/cnbc-exclusive-cnbc-transcript-u-s-treasury-secretary-steven-mnuchin-on-cnbcs-power-lunch-today.html', 'published': '2018-04-06T23:25:00.000+03:00', 'title': 'CNBC Exclusive: CNBC Transcript: U.S. Treasury Secretary Steven Mnuchin on CNBC’s “Power Lunch” Today', 'source': '../unzipped/financial_dataset/2018_04_112b52537b67659ad3609a234388c50a/news_0013370.json'})]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
